# ionbibtex

./: CMakeLists.txt  README.txt  build.sh
src/: CMakeLists.txt
src/ION/: CMakeLists.txt  CProgramOptions.cpp  ion_parser.cpp
src/ION/DataSource/: CDataSource.cpp  CDataSource.h  CDataSourceFile.cpp  CDataSourceFile.h  CDataSourceURL.cpp  CDataSourceURL.h
src/ION/MetadataElement/: CCitationMetadata.cpp  CCitationMetadata.h  CMetadataAbstract.cpp  CMetadataAbstract.h  CMetadataAuthor.cpp  CMetadataAuthor.h  CMetadataBibtexKey.h  CMetadataConference.cpp  CMetadataConference.h  CMetadataDoi.cpp  CMetadataDoi.h  CMetadataElement.cpp  CMetadataElement.h  CMetadataIssue.cpp  CMetadataIssue.h  CMetadataJournal.cpp  CMetadataJournal.h  CMetadataPages.cpp  CMetadataPages.h  CMetadataParser.cpp  CMetadataParser.h  CMetadataTitle.cpp  CMetadataTitle.h  CMetadataURL.cpp  CMetadataURL.h  CMetadataVolume.cpp  CMetadataVolume.h  CMetadataYear.cpp  CMetadataYear.h
src/ION/OutputAction/: COutputAction.cpp  COutputAction.h  COutputActionConsole.cpp  COutputActionConsole.h  COutputActionExecuteProgram.cpp  COutputActionExecuteProgram.h  COutputActionWriteFile.cpp  COutputActionWriteFile.h
src/ION/Publication/: CPublication.cpp  CPublication.h  CPublicationConference.cpp  CPublicationConference.h  CPublicationJournal.cpp  CPublicationJournal.h
src/Utilities/: CMakeLists.txt
src/Utilities/IO/: CCSVReader.cpp  CCSVReader.h  CDelimitedFileReader.cpp  CDelimitedFileReader.h  CFileInfo.cpp  CFileInfo.h  CINIReader.cpp  CINIReader.h  CListFileReader.cpp  CListFileReader.h  CMakeLists.txt  CTextFile.cpp  CTextFile.h  CWhitespaceDelimitedFileReader.cpp  CWhitespaceDelimitedFileReader.h
src/Utilities/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h  Test_StringUtilities.cpp
src/scripts/: jabref-import.sh
